--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,6 @@ DB_PASS=Matias0910
 DB_HOST=cluster0.mlkllc4.mongodb.net
 DB_OPTIONS=retryWrites=true&w=majority
 DB_NAME=Usuario
+DB_NAME_2=Producto
+
 JWT_SECRET=d5B@9r3K!x8gZ1LqV0wTy#P
