Agregar endpoind de Categorias

--- a/backend/.env
+++ b/backend/.env
@@ -7,5 +7,6 @@ DB_HOST=cluster0.mlkllc4.mongodb.net
 DB_OPTIONS=retryWrites=true&w=majority
 DB_NAME=Usuario
 DB_NAME_2=Producto
+DB_NAME_3=Categoria
 
 JWT_SECRET=d5B@9r3K!x8gZ1LqV0wTy#P
